--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.17.0",
     "chai": "^3.5.0",
+    "css-loader": "^0.26.1",
     "enzyme": "^2.5.1",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^13.0.0",
