--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsdom": "^9.8.0",
     "mocha": "^3.1.2",
     "react-addons-test-utils": "^15.3.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
