--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^1.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
